# KTX-Software

./: .appveyor.yml  .git-blame-ignore-revs  .gitmodules  CMakeLists.txt
tests/clitests/: CMakeLists.txt  clitest.py
tests/clitests/golden/: sample.err
tests/clitests/golden/info/: CesiumLogoFlat.out  CesiumLogoFlat.out.txt  CesiumLogoFlat_json.out  CesiumLogoFlat_mini.out  CesiumLogoFlat_text.out  FlightHelmet_baseColor_basis.out  FlightHelmet_baseColor_basis.out.txt  FlightHelmet_baseColor_basis_json.out  FlightHelmet_baseColor_basis_mini.out  FlightHelmet_baseColor_basis_text.out  alpha_simple_basis.out  alpha_simple_basis.out.txt  alpha_simple_basis_json.out  alpha_simple_basis_mini.out  alpha_simple_basis_text.out  arraytex_1_reference_u.out  arraytex_1_reference_u.out.txt  arraytex_1_reference_u_json.out  arraytex_1_reference_u_mini.out  arraytex_1_reference_u_text.out  arraytex_7_mipmap_reference_u.out  arraytex_7_mipmap_reference_u.out.txt  arraytex_7_mipmap_reference_u_json.out  arraytex_7_mipmap_reference_u_mini.out  arraytex_7_mipmap_reference_u_text.out  arraytex_7_reference_u.out  arraytex_7_reference_u.out.txt  arraytex_7_reference_u_json.out  arraytex_7_reference_u_mini.out  arraytex_7_reference_u_text.out  astc_ldr_10x5_FlightHelmet_baseColor.out  astc_ldr_10x5_FlightHelmet_baseColor.out.txt  astc_ldr_10x5_FlightHelmet_baseColor_json.out  astc_ldr_10x5_FlightHelmet_baseColor_mini.out  astc_ldr_10x5_FlightHelmet_baseColor_text.out  astc_ldr_12x10_FlightHelmet_baseColor.out  astc_ldr_12x10_FlightHelmet_baseColor.out.txt  astc_ldr_12x10_FlightHelmet_baseColor_json.out  astc_ldr_12x10_FlightHelmet_baseColor_mini.out  astc_ldr_12x10_FlightHelmet_baseColor_text.out  (+345 more)
tests/clitests/golden/validate/: fatal_2001_NotKTX2.out.txt
tests/clitests/input/images/: error_3001_ProhibitedFormat_A2B10G10R10_SSCALED_PACK32.ktx2  error_3001_ProhibitedFormat_A2B10G10R10_USCALED_PACK32.ktx2  error_3001_ProhibitedFormat_A2R10G10B10_SSCALED_PACK32.ktx2  error_3001_ProhibitedFormat_A2R10G10B10_USCALED_PACK32.ktx2  error_3001_ProhibitedFormat_A8B8G8R8_SINT_PACK32.ktx2  error_3001_ProhibitedFormat_A8B8G8R8_SNORM_PACK32.ktx2  error_3001_ProhibitedFormat_A8B8G8R8_SRGB_PACK32.ktx2  error_3001_ProhibitedFormat_A8B8G8R8_SSCALED_PACK32.ktx2  error_3001_ProhibitedFormat_A8B8G8R8_UINT_PACK32.ktx2  error_3001_ProhibitedFormat_A8B8G8R8_UNORM_PACK32.ktx2  error_3001_ProhibitedFormat_A8B8G8R8_USCALED_PACK32.ktx2  error_3001_ProhibitedFormat_B10X6G10X6R10X6G10X6_422_UNORM_4PACK16.ktx2  error_3001_ProhibitedFormat_B12X4G12X4R12X4G12X4_422_UNORM_4PACK16.ktx2  error_3001_ProhibitedFormat_B16G16R16G16_422_UNORM.ktx2  error_3001_ProhibitedFormat_B8G8R8A8_SSCALED.ktx2  error_3001_ProhibitedFormat_B8G8R8A8_USCALED.ktx2  error_3001_ProhibitedFormat_B8G8R8G8_422_UNORM.ktx2  error_3001_ProhibitedFormat_B8G8R8_SSCALED.ktx2  error_3001_ProhibitedFormat_B8G8R8_USCALED.ktx2  error_3001_ProhibitedFormat_G10X6B10X6G10X6R10X6_422_UNORM_4PACK16.ktx2  error_3001_ProhibitedFormat_G10X6_B10X6R10X6_2PLANE_420_UNORM_3PACK16.ktx2  error_3001_ProhibitedFormat_G10X6_B10X6R10X6_2PLANE_422_UNORM_3PACK16.ktx2  error_3001_ProhibitedFormat_G10X6_B10X6_R10X6_3PLANE_420_UNORM_3PACK16.ktx2  error_3001_ProhibitedFormat_G10X6_B10X6_R10X6_3PLANE_422_UNORM_3PACK16.ktx2  error_3001_ProhibitedFormat_G10X6_B10X6_R10X6_3PLANE_444_UNORM_3PACK16.ktx2  error_3001_ProhibitedFormat_G12X4B12X4G12X4R12X4_422_UNORM_4PACK16.ktx2  error_3001_ProhibitedFormat_G12X4_B12X4R12X4_2PLANE_420_UNORM_3PACK16.ktx2  error_3001_ProhibitedFormat_G12X4_B12X4R12X4_2PLANE_422_UNORM_3PACK16.ktx2  error_3001_ProhibitedFormat_G12X4_B12X4_R12X4_3PLANE_420_UNORM_3PACK16.ktx2  error_3001_ProhibitedFormat_G16B16G16R16_422_UNORM.ktx2  (+226 more)
tools/ktx/: CMakeLists.txt  command.cpp  command.h  command.hpp  command_info.cpp  command_validate.cpp  ktx_main.cpp  utility.h  validate.cpp  validate.h  validation_messages.h  vkformat.h
tools/ktx/schema/: schema_info.json
(+36 files in other folders)
